# tdlib_driver

./: .gitmodules  Cargo.toml  README.md  build.rs  build.sh  compose.yaml  headers.h
.github/workflows/: pages.yml
src/: binding.rs  lib.rs  td_api.rs  tdlib.rs
td_api_rs/: .gitignore  Cargo.toml  subset.md
td_api_rs/src/: base.rs  combinator.rs  comment.rs  compile.rs  compile_test.rs  lib.rs  parse_tests.rs  partial.rs  syntax.rs
td_api_rs/src/combinator/: parse_tests.rs
td_api_rs/src/comment/: compile_tests.rs  parse_tests.rs
td_api_rs/src/syntax/: parse_tests.rs
