[package]
name = "tdlib-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.161"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
td-api-rs = { path = "./td_api_rs"}
